--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "~5.6.0",
+        "php": "5.*",
         "laravel/framework": "5.1.*",
         "laravel/socialite": "^2.0",
         "socialiteproviders/google": "^1.1",
