--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "socialiteproviders/google": "^1.1",
         "laracasts/flash": "^1.3",
         "illuminate/html": "^5.0",
-        "twbs/bootstrap": "3.3.6"
+        "twbs/bootstrap": "3.3.6",
+        "socialiteproviders/microsoft-live": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
