--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laracasts/flash": "^1.3",
         "illuminate/html": "^5.0",
         "twbs/bootstrap": "3.3.6",
-        "socialiteproviders/microsoft-live": "^1.1"
+        "socialiteproviders/microsoft-live": "^1.1",
+        "intervention/image": "^2.3",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
